ajout du readme

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div>
       <div>
         <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs"></div>
-        <div></div>
+        <div><p>Formez-vous dans la première école de management dédié aux enjeux </p></div>
         <div></div>
       </div>
       <div></div>
