ajout du readme

--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
     <div>
       <div>
         <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs"></div>
-        <div><p>Formez-vous dans la première école de management dédié aux enjeux </p></div>
+        <div>Gaming Buisness school</div>
+        <div><p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p></div>
+        <div>En savoir plus</div>
+      </div>
+      <div>
+        <div></div>
+        <div></div>
         <div></div>
       </div>
-      <div></div>
       <div></div>
     </div>
     <div></div>
