Avancement du html

--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Campus gaming</title>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Campus gaming</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" />
 </head>
+
 <body>
   <header>
     <nav>
@@ -19,35 +21,75 @@
         <li>Le campus</li>
         <li>NewsRoom</li>
         <li>Parents</li>
-        <li>FR/EN</li>
+        <li> 
+          <div class="fr">FR</div>
+          <div class="en">EN</div>
+        </li>
       </ul>
     </nav>
-  </header>
-  <section>
     <div class="top">
       <div>
         <img src="./img/logo-gc-hero.png" alt="">
       </div>
-      <div>Passion.Professionnalisme.Preformances.</div><button>Gaming campus en vidéo</button></div>
+      <h1>Passion.Professionnalisme.Preformances.</h1>
+      <button class="button-1">Gaming campus en vidéo</button>
     </div>
-    <div> <p>Imaginé par des prodessionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique ou révéler des talents et développer des compétences.</p></div>
+    <div>
+      <p>Imaginé par des prodessionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique ou révéler
+        des talents et développer des compétences.</p>
+    </div>
+  </header>
+  <section>
     <div>
       <div>
         <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs"></div>
-        <div>Gaming Buisness school</div>
-        <div><p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p></div>
-        <div>En savoir plus</div>
+        <h3>Gaming Buisness school</h3>
+        <div>
+          <p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p>
+        </div>
+        <div class="button-2"><button> En savoir plus</button></div>
       </div>
       <div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div><img src="./img/logo-ga-home.png" alt="Logo de Ga"></div>
+        <h3>Gaming acadmy</h3>
+        <div>Entrainez-vous dans des condition potimales pour devenir esportif professionnel</div>
+        <div class="button-2"><button> En savoir plus</button></div>
       </div>
-      <div></div>
+      <div>
+        <div><img src="./img/logo-gg-home.png" alt="Logo de Gg"></div>
+        <h3>Gaming Guru</h3>
+        <div>Jouez avec les meilleurs Gamers pour vous améliorer dans vos jeux vidéo préférés</div>
+        <div class="button-2"><button> En savoir plus</button></div>
+      </div>
+    </div>
+    <div>
+      <div>
+        <h2>Les news du campus</h2>
+        <div> Suivez l'acitvité de Gamign Campus, de G.Guru, G.B.S et G.Academy</div>
+        <button class="button-3">LA NewsRoom</button>
+      </div>
+      <div>
+        <div><img src="./img/ri8decembre.jpg" alt="Image de la réunion"></div>
+        <h4>Réunion d'information 19 décembre</h4>
+        <p> Venez anotre rencontrelors de cette rénion d'informaion. Témoignages des étudiants / Ateliers sr la pédagogie par projet "Active Learning bt Gaming Campu"/Découverte des locaux / Rencontre avec l'équipe pédagogique / QUestion réponses</p>
+        <button>Sur Inscription</button>
+      </div>
+      <div>
+        <div><img src="./img/pgw18home.jpg" alt="Image de la PGW 2018"></div>
+        <h4>Paris Games Week 2018 et réunion d'information</h4>
+        <p> Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand Gaming Capums à ma PGW18</p>
+        <button>Lire la suite</button>
+      </div>
+      <div>
+        <div><img src="./img/inauguration_gaming_campus_photo.jpg" alt="Image de l'inauguration du Campus de Lyon"></div>
+        <h4>Inoguration Gaming Campus Lyon</h4>
+        <p> Revivez l'inauguration de Gaming Campus Lyon avec 180 invités, kes grands annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
+        <button>Lire la suite</button>
+      </div>
     </div>
     <div></div>
-    <div></div>
   </section>
-  
+
 </body>
+
 </html>
