--- a/index.html
+++ b/index.html
@@ -14,26 +14,41 @@
   <header>
     <nav>
       <ul>
-        <li>Accueil</li>
-        <li>Buisness school</li>
-        <li>Ecole Esport</li>
-        <li>Cours de jeux vidéos</li>
-        <li>Le campus</li>
-        <li>NewsRoom</li>
-        <li>Parents</li>
-        <li> 
-          <div class="fr">FR</div>
-          <div class="en">EN</div>
-        </li>
+        <a href="">
+          <li>Accueil</li>
+        </a>
+        <a href="">
+          <li>Buisness School</li>
+        </a>
+        <a href="">
+          <li>Ecole Esport</li>
+        </a>
+        <a href="">
+          <li>Cours de jeux vidéo</li>
+        </a>
+        <a href="">
+          <li>Le Campus</li>
+        </a>
+        <a href="">
+          <li>NewsRoom</li>
+        </a>
+        <a href="">
+          <li>Parents</li>
+        </a>
+        <a class="a-last" href="">
+          <li class="last">
+            <div class="fr">FR</div>
+            <div class="en">EN</div>
+          </li>
+        </a>
       </ul>
     </nav>
     <div class="top">
-      <div>
-        <img src="./img/logo-gc-hero.png" alt="">
-      </div>
+        <img src="./img/logo-gc-hero.png" alt="Logo Gaming Campus">
       <h1>Passion.Professionnalisme.Preformances.</h1>
-      <button class="button-1">Gaming campus en vidéo</button>
+      <a href="" class="button-1">Gaming campus en vidéo <i class="fas fa-chevron-right"></i></a>
     </div>
+    
     <div>
       <p>Imaginé par des prodessionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique ou révéler
         des talents et développer des compétences.</p>
@@ -42,7 +57,7 @@
   <section>
     <div>
       <div>
-        <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs"></div>
+        <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs" id="gbs"></div>
         <h3>Gaming Buisness school</h3>
         <div>
           <p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p>
@@ -50,13 +65,13 @@
         <div class="button-2"><button> En savoir plus</button></div>
       </div>
       <div>
-        <div><img src="./img/logo-ga-home.png" alt="Logo de Ga"></div>
+        <div><img src="./img/logo-ga-home.png" alt="Logo de Ga" id="ga"></div>
         <h3>Gaming acadmy</h3>
         <div>Entrainez-vous dans des condition potimales pour devenir esportif professionnel</div>
         <div class="button-2"><button> En savoir plus</button></div>
       </div>
       <div>
-        <div><img src="./img/logo-gg-home.png" alt="Logo de Gg"></div>
+        <div><img src="./img/logo-gg-home.png" alt="Logo de Gg" id="gg"></div>
         <h3>Gaming Guru</h3>
         <div>Jouez avec les meilleurs Gamers pour vous améliorer dans vos jeux vidéo préférés</div>
         <div class="button-2"><button> En savoir plus</button></div>
@@ -71,24 +86,89 @@
       <div>
         <div><img src="./img/ri8decembre.jpg" alt="Image de la réunion"></div>
         <h4>Réunion d'information 19 décembre</h4>
-        <p> Venez anotre rencontrelors de cette rénion d'informaion. Témoignages des étudiants / Ateliers sr la pédagogie par projet "Active Learning bt Gaming Campu"/Découverte des locaux / Rencontre avec l'équipe pédagogique / QUestion réponses</p>
+        <p> Venez anotre rencontrelors de cette rénion d'informaion. Témoignages des étudiants / Ateliers sr la
+          pédagogie par projet "Active Learning bt Gaming Campu"/Découverte des locaux / Rencontre avec l'équipe
+          pédagogique / QUestion réponses</p>
         <button>Sur Inscription</button>
       </div>
       <div>
         <div><img src="./img/pgw18home.jpg" alt="Image de la PGW 2018"></div>
         <h4>Paris Games Week 2018 et réunion d'information</h4>
-        <p> Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand Gaming Capums à ma PGW18</p>
+        <p> Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand
+          Gaming Capums à ma PGW18</p>
         <button>Lire la suite</button>
       </div>
       <div>
-        <div><img src="./img/inauguration_gaming_campus_photo.jpg" alt="Image de l'inauguration du Campus de Lyon"></div>
+        <div><img src="./img/inauguration_gaming_campus_photo.jpg" alt="Image de l'inauguration du Campus de Lyon">
+        </div>
         <h4>Inoguration Gaming Campus Lyon</h4>
-        <p> Revivez l'inauguration de Gaming Campus Lyon avec 180 invités, kes grands annonces de la rentrée, les photos de la soirée et les premières dates de réunions d'information.</p>
+        <p> Revivez l'inauguration de Gaming Campus Lyon avec 180 invités, kes grands annonces de la rentrée, les photos
+          de la soirée et les premières dates de réunions d'information.</p>
         <button>Lire la suite</button>
       </div>
     </div>
-    <div></div>
   </section>
+  <footer>
+    <div>
+      <div>
+        <img src="./img/logo-gc-footer.jpg" alt="Logo du Gaming Campus">
+      </div>
+      <div>
+        <h5>Infos pratiques</h5>
+        <div><a href="#gbs">Gaming Buisness School</a></div>
+        <div><a href="#ga">Gaming Academy</a></div>
+        <div><a href="#gg">Gaming Guru</a></div>
+        <div>Recrutemt</div>
+        <div>investisseur</div>
+        <div>Mentions légales</div>
+        <div>C.G.U</div>
+      </div>
+      <div>
+        <h5>Parents</h5>
+        <p>Question/ réponses pour vous accompagner dasn la votre rélfextion sur l'orientation de votre enfant et le
+          choix de Gaming Campus</p>
+        <div>En savoir plus</div>
+      </div>
+      <div>
+        <div>
+          <h5>Nous contacté</h5>
+          <div>Tel:04 28 29 81 03</div>
+          <div>contact@gamingcampus.fr</div>
+        </div>
+        <div>
+          <h5>Nou suivre</h5>
+          <div><i class="fab fa-twitter"></i></div>
+          <div><i class="fab fa-facebook"></i></div>
+          <div><i class="fab fa-linkedin"></i></div>
+          <div><i class="fab fa-instagram"></i></div>
+          <div><i class="far fa-copyright"></i> 2018 Gaming Campus Tout droits réservé</div>
+        </div>
+      </div>
+    </div>
+    <div>
+      <img src="./img/figaro.png" alt="Logo du figaro">
+      <img src="./img/challenges.png" alt="Logo de challenges">
+      <img src="./img/leparisien.png" alt="Logo le parisien">
+      <img src="./img/lemonde.png" alt="Logo le monde">
+      <img src="./img/progres.png" alt="Logo progres">
+      <img src="./img/echos.png" alt="Logo Les Echos">
+      <img src="./img/bfm.png" alt="Logo bfm">
+      <img src="./img/lepoint.png" alt="Logo l'Équipe">
+    </div>
+    <div>
+      <h5>Partenaires officiels</h5>
+      <img src="./img/apollo.png" alt="Logo Apollo">
+      <img src="./img/chiliz.png" alt="Logo Chiliz">
+      <img src="img/omen.png" alt="Logo Omen">
+      <img src="img/joa.png" alt="Logo Joa">
+      <img src="img/zol.png" alt="Logo Zol">
+      <img src="img/maxonomic.png" alt="Logo Maxomanic">
+      <img src="img/credit-mutuel.png" alt="Logo Crédit mutuel">
+      <img src="img/talent-web.png" alt="Logo Talent Web">
+      <img src="img/ubisoft.png" alt="Logo Ubisoft">
+      <img src="img/vitality.png" alt="Logo Team Vitality">
+    </div>
+  </footer>
 
 </body>
 
