--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="under-section1">
         <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs" id="gbs"></div>
         <h3>Gaming Buisness school</h3>
-          <p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p>
+        <p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p>
         <a class="button-1"><div>En savoir plus</div></a>
       </div>
       <div class="under-section1">
@@ -75,77 +75,81 @@
         <a class="button-1"><div> En savoir plus</div></a>
       </div>
     </div>
-    <div section2>
-      <div>
-        <h2>Les news du campus</h2>
-        <div> Suivez l'acitvité de Gamign Campus, de G.Guru, G.B.S et G.Academy</div>
-        <button class="button-3">LA NewsRoom</button>
-      </div>
-      <div>
+    <div class="color3">
+      <div class="section2">
         <div>
+          <h2>Les news du campus</h2>
+          <div> Suivez l'acitvité de Gamign Campus, de G.Guru, G.B.S et G.Academy</div>
+        </div>
+        <a href=""><div class="btnnews">La NewsRoom<i class="fas fa-chevron-right"></i></div></a>
+      </div>
+      <div class="usection2 color3">
+        <div class="unders2">
           <div><img src="./img/ri8decembre.jpg" alt="Image de la réunion"></div>
           <h4>Réunion d'information 19 décembre</h4>
           <p> Venez anotre rencontrelors de cette rénion d'informaion. Témoignages des étudiants / Ateliers sr la
             pédagogie par projet "Active Learning bt Gaming Campu"/Découverte des locaux / Rencontre avec l'équipe
             pédagogique / QUestion réponses</p>
-          <button>Sur Inscription</button>
+          <a href=""><div>Sur Inscription<i class="fas fa-chevron-right"></i></div></a>
         </div>
-        <div>
+        <div class="unders2">
           <div><img src="./img/pgw18home.jpg" alt="Image de la PGW 2018"></div>
           <h4>Paris Games Week 2018 et réunion d'information</h4>
           <p> Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand
-            Gaming Capums à ma PGW18</p>
-          <button>Lire la suite</button>
+           Gaming Capums à ma PGW18</p>
+          <a href=""><div>Lire la suite<i class="fas fa-chevron-right"></i></div></a>
         </div>
-        <div>
+        <div class="unders2">
           <div><img src="./img/inauguration_gaming_campus_photo.jpg" alt="Image de l'inauguration du Campus de Lyon">
           </div>
           <h4>Inoguration Gaming Campus Lyon</h4>
           <p> Revivez l'inauguration de Gaming Campus Lyon avec 180 invités, kes grands annonces de la rentrée, les photos
             de la soirée et les premières dates de réunions d'information.</p>
-          <button>Lire la suite</button>
+          <a href=""><div>Lire la suite<i class="fas fa-chevron-right"></i></div></a>
         </div>
       </div>
     </div>
   </section>
   <footer>
-    <div>
+    <div class="top-footer">
       <div>
         <img src="./img/logo-gc-footer.jpg" alt="Logo du Gaming Campus">
       </div>
-      <div>
+      <div class="utop-footer second-footer">
         <h5>Infos pratiques</h5>
-        <div><a href="#gbs">Gaming Buisness School</a></div>
-        <div><a href="#ga">Gaming Academy</a></div>
-        <div><a href="#gg">Gaming Guru</a></div>
-        <div>Recrutemt</div>
-        <div>investisseur</div>
-        <div>Mentions légales</div>
-        <div>C.G.U</div>
+        <a href="#gbs"><div>Gaming Buisness School</div></a>
+        <a href="#ga"><div>Gaming Academy</div></a>
+        <a href="#gg"><div>Gaming Guru</div></a>
+        <a href=""><div> Recrutemt </div></a>
+        <a href=""><div> Investisseur </div></a>
+        <a href=""><div> Mentions légales</div></a>
+        <a href=""><div> C.G.U</div></a>
       </div>
-      <div>
+      <div class="utop-footer">
         <h5>Parents</h5>
         <p>Question/ réponses pour vous accompagner dasn la votre rélfextion sur l'orientation de votre enfant et le
           choix de Gaming Campus</p>
-        <div>En savoir plus</div>
+        <a href=""><div>En savoir plus</div></a>
       </div>
-      <div>
+      <div class="utop-footer">
         <div>
           <h5>Nous contacté</h5>
           <div>Tel:04 28 29 81 03</div>
           <div>contact@gamingcampus.fr</div>
         </div>
-        <div>
+        <div class="utop-footer">
           <h5>Nou suivre</h5>
-          <div><i class="fab fa-twitter"></i></div>
-          <div><i class="fab fa-facebook"></i></div>
-          <div><i class="fab fa-linkedin"></i></div>
-          <div><i class="fab fa-instagram"></i></div>
+          <div class="flex">
+            <div><i class="fab fa-twitter"></i></div>
+            <div><i class="fab fa-facebook"></i></div>
+            <div><i class="fab fa-linkedin"></i></div>
+            <div><i class="fab fa-instagram"></i></div>
+          </div>
           <div><i class="far fa-copyright"></i> 2018 Gaming Campus Tout droits réservé</div>
         </div>
       </div>
     </div>
-    <div>
+    <div class="flex">
       <img src="./img/figaro.png" alt="Logo du figaro">
       <img src="./img/challenges.png" alt="Logo de challenges">
       <img src="./img/leparisien.png" alt="Logo le parisien">
@@ -157,16 +161,18 @@
     </div>
     <div>
       <h5>Partenaires officiels</h5>
-      <img src="./img/apollo.png" alt="Logo Apollo">
-      <img src="./img/chiliz.png" alt="Logo Chiliz">
-      <img src="img/omen.png" alt="Logo Omen">
-      <img src="img/joa.png" alt="Logo Joa">
-      <img src="img/zol.png" alt="Logo Zol">
-      <img src="img/maxonomic.png" alt="Logo Maxomanic">
-      <img src="img/credit-mutuel.png" alt="Logo Crédit mutuel">
-      <img src="img/talent-web.png" alt="Logo Talent Web">
-      <img src="img/ubisoft.png" alt="Logo Ubisoft">
-      <img src="img/vitality.png" alt="Logo Team Vitality">
+      <div class="flex">
+        <img src="./img/apollo.png" alt="Logo Apollo">
+        <img src="./img/chiliz.png" alt="Logo Chiliz">
+        <img src="img/omen.png" alt="Logo Omen">
+        <img src="img/joa.png" alt="Logo Joa">
+        <img src="img/zol.png" alt="Logo Zol">
+        <img src="img/maxonomic.png" alt="Logo Maxomanic">
+        <img src="img/credit-mutuel.png" alt="Logo Crédit mutuel">
+        <img src="img/talent-web.png" alt="Logo Talent Web">
+        <img src="img/ubisoft.png" alt="Logo Ubisoft">
+        <img src="img/vitality.png" alt="Logo Team Vitality">
+      </div>  
     </div>
   </footer>
 
