fin de deuxième journé

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     
     <div class="head-1">
-      <p>Imaginé par des prodessionnels des jeux vidéos et de l'éducation, Gaming Campus est un lieu unique ou révéler
+      <p>Imaginé par des prodessionnels de jeux vidéo et de l'éducation, Gaming Campus est un lieu unique ou révéler
         des talents et développer des compétences.</p>
     </div>
   </header>
@@ -112,54 +112,61 @@
   </section>
   <footer>
     <div class="top-footer">
-      <div>
+      <div class="utop-footer">
         <img src="./img/logo-gc-footer.jpg" alt="Logo du Gaming Campus">
       </div>
-      <div class="utop-footer second-footer">
+      <div class="utop-footer">
         <h5>Infos pratiques</h5>
         <a href="#gbs"><div>Gaming Buisness School</div></a>
         <a href="#ga"><div>Gaming Academy</div></a>
         <a href="#gg"><div>Gaming Guru</div></a>
-        <a href=""><div> Recrutemt </div></a>
-        <a href=""><div> Investisseur </div></a>
+        <a href=""><div> Recrutement </div></a>
+        <a href=""><div> Investisseurs </div></a>
         <a href=""><div> Mentions légales</div></a>
         <a href=""><div> C.G.U</div></a>
       </div>
       <div class="utop-footer">
         <h5>Parents</h5>
-        <p>Question/ réponses pour vous accompagner dasn la votre rélfextion sur l'orientation de votre enfant et le
+        <p>Questions/ réponses pour vous accompagner dans votre rélfextion sur l'orientation de votre enfant et le
           choix de Gaming Campus</p>
         <a href=""><div>En savoir plus</div></a>
       </div>
       <div class="utop-footer">
-        <div>
-          <h5>Nous contacté</h5>
-          <div>Tel:04 28 29 81 03</div>
-          <div>contact@gamingcampus.fr</div>
+        <div class="flast-1">
+          <h5>Nous contacter</h5>
+          <div class="phone">Tel:04 28 29 81 03</div>
+          <div class="mail">contact@gamingcampus.fr</div>
         </div>
-        <div class="utop-footer">
+        <div class="flast-2">
           <h5>Nou suivre</h5>
-          <div class="flex">
-            <div><i class="fab fa-twitter"></i></div>
-            <div><i class="fab fa-facebook"></i></div>
-            <div><i class="fab fa-linkedin"></i></div>
-            <div><i class="fab fa-instagram"></i></div>
+          <div class="flex emote">
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-facebook"></i>
+            <i class="fab fa-linkedin"></i>
+            <i class="fab fa-instagram"></i>
           </div>
-          <div><i class="far fa-copyright"></i> 2018 Gaming Campus Tout droits réservé</div>
+          <div class="copyright"><i class="far fa-copyright"></i> 2018 Gaming Campus
+            <br> Tous droits réservé</div>
         </div>
       </div>
     </div>
-    <div class="flex">
-      <img src="./img/figaro.png" alt="Logo du figaro">
-      <img src="./img/challenges.png" alt="Logo de challenges">
-      <img src="./img/leparisien.png" alt="Logo le parisien">
-      <img src="./img/lemonde.png" alt="Logo le monde">
-      <img src="./img/progres.png" alt="Logo progres">
-      <img src="./img/echos.png" alt="Logo Les Echos">
-      <img src="./img/bfm.png" alt="Logo bfm">
-      <img src="./img/lepoint.png" alt="Logo l'Équipe">
+    <div class="flex mid-footer">
+      <div class=lm-footer>
+        <h5>Ils parlent de nous</h5>
+        <p>Voir toutes les retombées presse</p>
+      </div>
+      <div class="rm-footer ">
+        <div><img src="./img/figaro.png" alt="Logo du figaro"></div>
+        <div><img src="./img/challenges.png" alt="Logo de challenges"></div>
+        <div><img src="./img/leparisien.png" alt="Logo le parisien"></div>
+        <div><img src="./img/lemonde.png" alt="Logo le monde"></div>
+        <div><img src="./img/progres.png" alt="Logo progres"></div>
+        <div><img src="./img/echos.png" alt="Logo Les Echos"></div>
+        <div><img src="./img/bfm.png" alt="Logo bfm"></div>
+        <div><img src="./img/lepoint.png" alt="Logo l'Équipe"></div>
     </div>
-    <div>
+    </div>
+    <div class="end-footer">
       <h5>Partenaires officiels</h5>
       <div class="flex">
         <img src="./img/apollo.png" alt="Logo Apollo">
