--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
     <div class="top">
         <img src="./img/logo-gc-hero.png" alt="Logo Gaming Campus">
-      <h1>Passion.Professionnalisme.Preformances.</h1>
+      <h1>Passion. Professionnalisme. Preformances.</h1>
       <a href="" class="button-1">Gaming campus en vidéo <i class="fas fa-chevron-right"></i></a>
     </div>
     
@@ -79,9 +79,9 @@
       <div class="section2">
         <div>
           <h2>Les news du campus</h2>
-          <div> Suivez l'acitvité de Gamign Campus, de G.Guru, G.B.S et G.Academy</div>
+          <div class="activities"> Suivez l'acitvité de Gamign Campus, de G.Guru, G.B.S et G.Academy</div>
         </div>
-        <a href=""><div class="btnnews">La NewsRoom<i class="fas fa-chevron-right"></i></div></a>
+        <a href=""><div class="btnnews"><span> La NewsRoom </span><i class="fas fa-chevron-right"></i></div></a>
       </div>
       <div class="usection2 color3">
         <div class="unders2">
