--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <footer>
     <div class="top-footer">
       <div class="utop-footer">
-        <img src="./img/logo-gc-footer.jpg" alt="Logo du Gaming Campus">
+        <img class="imgfooter" src="./img/logo-gc-footer.jpg" alt="Logo du Gaming Campus">
       </div>
       <div class="utop-footer">
         <h5>Infos pratiques</h5>
