--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!-- mettre des width a chaque section  -->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -44,11 +46,11 @@
       </ul>
     </nav>
     <div class="top">
-        <img src="./img/logo-gc-hero.png" alt="Logo Gaming Campus">
+      <img src="./img/logo-gc-hero.png" alt="Logo Gaming Campus">
       <h1>Passion. Professionnalisme. Preformances.</h1>
       <a href="" class="button-1">Gaming campus en vidéo <i class="fas fa-chevron-right"></i></a>
     </div>
-    
+
     <div class="head-1">
       <p>Imaginé par des prodessionnels de jeux vidéo et de l'éducation, Gaming Campus est un lieu unique ou révéler
         des talents et développer des compétences.</p>
@@ -56,32 +58,42 @@
   </header>
   <section>
     <div class="section1">
-      <div class="under-section1">
-        <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs" id="gbs"></div>
-        <h3>Gaming Buisness school</h3>
-        <p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p>
-        <a class="button-1"><div>En savoir plus</div></a>
+        <div class="s1-container">
+          <div class="under-section1">
+            <div><img src="./img/logo-gbs-home.png" alt="Logo de Gbs" id="gbs"></div>
+            <h3>Gaming Buisness school</h3>
+            <p>Formez-vous dans la première école de management dédié aux enjeux et metiers du jeu vidéo</p>
+            <a class="button-1">
+              <div>En savoir plus</div>
+            </a>
+          </div>
+          <div class="under-section1">
+            <div><img src="./img/logo-ga-home.png" alt="Logo de Ga" id="ga"></div>
+            <h3>Gaming acadmy</h3>
+            <p>Entrainez-vous dans des condition potimales pour devenir esportif professionnel</p>
+            <a class="button-1">
+              <div> En savoir plus</div>
+            </a>
+          </div>
+          <div class="under-section1">
+            <div><img src="./img/logo-gg-home.png" alt="Logo de Gg" id="gg"></div>
+            <h3>Gaming Guru</h3>
+            <p>Jouez avec les meilleurs Gamers pour vous améliorer dans vos jeux vidéo préférés</p>
+            <a class="button-1">
+              <div> En savoir plus</div>
+            </a>
+        </div>
+        </div>
       </div>
-      <div class="under-section1">
-        <div><img src="./img/logo-ga-home.png" alt="Logo de Ga" id="ga"></div>
-        <h3>Gaming acadmy</h3>
-        <p>Entrainez-vous dans des condition potimales pour devenir esportif professionnel</p>
-        <a class="button-1"><div> En savoir plus</div></a>
-      </div>
-      <div class="under-section1">
-        <div><img src="./img/logo-gg-home.png" alt="Logo de Gg" id="gg"></div>
-        <h3>Gaming Guru</h3>
-        <p>Jouez avec les meilleurs Gamers pour vous améliorer dans vos jeux vidéo préférés</p>
-        <a class="button-1"><div> En savoir plus</div></a>
-      </div>
-    </div>
     <div class="color3">
       <div class="section2">
         <div>
           <h2>Les news du campus</h2>
           <div class="activities"> Suivez l'acitvité de Gamign Campus, de G.Guru, G.B.S et G.Academy</div>
         </div>
-        <a href=""><div class="btnnews"><span> La NewsRoom </span><i class="fas fa-chevron-right"></i></div></a>
+        <a href="">
+          <div class="btnnews"><span> La NewsRoom </span><i class="fas fa-chevron-right"></i></div>
+        </a>
       </div>
       <div class="usection2 color3">
         <div class="unders2">
@@ -90,22 +102,30 @@
           <p> Venez anotre rencontrelors de cette rénion d'informaion. Témoignages des étudiants / Ateliers sr la
             pédagogie par projet "Active Learning bt Gaming Campu"/Découverte des locaux / Rencontre avec l'équipe
             pédagogique / QUestion réponses</p>
-          <a href=""><div>Sur Inscription<i class="fas fa-chevron-right"></i></div></a>
+          <a href="">
+            <div>Sur Inscription<i class="fas fa-chevron-right"></i></div>
+          </a>
         </div>
         <div class="unders2">
           <div><img src="./img/pgw18home.jpg" alt="Image de la PGW 2018"></div>
           <h4>Paris Games Week 2018 et réunion d'information</h4>
-          <p> Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et stand
-           Gaming Capums à ma PGW18</p>
-          <a href=""><div>Lire la suite<i class="fas fa-chevron-right"></i></div></a>
+          <p> Pendant tout le mois d'octobre venez rencontrer l'équipe pédagogique du Gaming Campus: Campus Lyon et
+            stand
+            Gaming Capums à ma PGW18</p>
+          <a href="">
+            <div>Lire la suite<i class="fas fa-chevron-right"></i></div>
+          </a>
         </div>
         <div class="unders2">
           <div><img src="./img/inauguration_gaming_campus_photo.jpg" alt="Image de l'inauguration du Campus de Lyon">
           </div>
           <h4>Inoguration Gaming Campus Lyon</h4>
-          <p> Revivez l'inauguration de Gaming Campus Lyon avec 180 invités, kes grands annonces de la rentrée, les photos
+          <p> Revivez l'inauguration de Gaming Campus Lyon avec 180 invités, kes grands annonces de la rentrée, les
+            photos
             de la soirée et les premières dates de réunions d'information.</p>
-          <a href=""><div>Lire la suite<i class="fas fa-chevron-right"></i></div></a>
+          <a href="">
+            <div>Lire la suite<i class="fas fa-chevron-right"></i></div>
+          </a>
         </div>
       </div>
     </div>
@@ -117,19 +137,35 @@
       </div>
       <div class="utop-footer">
         <h5>Infos pratiques</h5>
-        <a href="#gbs"><div>Gaming Buisness School</div></a>
-        <a href="#ga"><div>Gaming Academy</div></a>
-        <a href="#gg"><div>Gaming Guru</div></a>
-        <a href=""><div> Recrutement </div></a>
-        <a href=""><div> Investisseurs </div></a>
-        <a href=""><div> Mentions légales</div></a>
-        <a href=""><div> C.G.U</div></a>
+        <a href="#gbs">
+          <div>Gaming Buisness School</div>
+        </a>
+        <a href="#ga">
+          <div>Gaming Academy</div>
+        </a>
+        <a href="#gg">
+          <div>Gaming Guru</div>
+        </a>
+        <a href="">
+          <div> Recrutement </div>
+        </a>
+        <a href="">
+          <div> Investisseurs </div>
+        </a>
+        <a href="">
+          <div> Mentions légales</div>
+        </a>
+        <a href="">
+          <div> C.G.U</div>
+        </a>
       </div>
       <div class="utop-footer">
         <h5>Parents</h5>
         <p>Questions/ réponses pour vous accompagner dans votre rélfextion sur l'orientation de votre enfant et le
           choix de Gaming Campus</p>
-        <a href=""><div>En savoir plus</div></a>
+        <a href="">
+          <div>En savoir plus</div>
+        </a>
       </div>
       <div class="utop-footer">
         <div class="flast-1">
@@ -146,7 +182,8 @@
             <i class="fab fa-instagram"></i>
           </div>
           <div class="copyright"><i class="far fa-copyright"></i> 2018 Gaming Campus
-            <br> Tous droits réservé</div>
+            <br> Tous droits réservé
+          </div>
         </div>
       </div>
     </div>
@@ -164,22 +201,42 @@
         <div><img src="./img/echos.png" alt="Logo Les Echos"></div>
         <div><img src="./img/bfm.png" alt="Logo bfm"></div>
         <div><img src="./img/lepoint.png" alt="Logo l'Équipe"></div>
-    </div>
+      </div>
     </div>
     <div class="end-footer">
       <h5>Partenaires officiels</h5>
-      <div class="flex">
-        <img src="./img/apollo.png" alt="Logo Apollo">
-        <img src="./img/chiliz.png" alt="Logo Chiliz">
-        <img src="img/omen.png" alt="Logo Omen">
-        <img src="img/joa.png" alt="Logo Joa">
-        <img src="img/zol.png" alt="Logo Zol">
-        <img src="img/maxonomic.png" alt="Logo Maxomanic">
-        <img src="img/credit-mutuel.png" alt="Logo Crédit mutuel">
-        <img src="img/talent-web.png" alt="Logo Talent Web">
-        <img src="img/ubisoft.png" alt="Logo Ubisoft">
-        <img src="img/vitality.png" alt="Logo Team Vitality">
-      </div>  
+      <div class="flex footer-container">
+        <div class="fimg">
+          <img src="./img/apollo.png" alt="Logo Apollo">
+        </div>
+        <div class="fimg">
+          <img src="./img/chiliz.png" alt="Logo Chiliz">
+        </div>
+        <div class="fimg">
+          <img src="img/omen.png" alt="Logo Omen">
+        </div>
+        <div class="fimg">
+          <img src="img/joa.png" alt="Logo Joa">
+        </div>
+        <div class="fimg">
+          <img src="img/zol.png" alt="Logo Zol">
+        </div>
+        <div class="fimg">
+          <img src="img/maxonomic.png" alt="Logo Maxomanic">
+        </div>
+        <div class="fimg">
+          <img src="img/credit-mutuel.png" alt="Logo Crédit mutuel">
+        </div>
+        <div class="fimg">
+          <img src="img/talent-web.png" alt="Logo Talent Web">
+        </div>
+        <div class="fimg">
+          <img src="img/ubisoft.png" alt="Logo Ubisoft">
+        </div>
+        <div class="fimg">
+          <img src="img/vitality.png" alt="Logo Team Vitality">
+        </div>
+      </div>
     </div>
   </footer>
 
